@@ -50,6 +50,7 @@ import java.awt.GridBagLayout;
 import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -70,6 +71,7 @@ import org.netbeans.modules.java.j2seplatform.platformdefinition.J2SEPlatformImp
 import org.netbeans.spi.java.classpath.PathResourceImplementation;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
 import org.netbeans.spi.project.support.ant.PropertyUtils;
+import org.openide.util.Exceptions;
 import org.openide.util.NbBundle;
 import org.openide.util.RequestProcessor;
 import org.openide.util.Task;
@@ -456,7 +458,6 @@ public class DetectPanel extends javax.swing.JPanel {
             this.wiz = settings;
             JavaPlatform platform = this.iterator.getPlatform();
             String srcPath = null;
-            String jdocPath = null;
             ClassPath src = platform.getSourceFolders();
             if (src.entries().size()>0) {
                 URL folderRoot = src.entries().get(0).getURL();
@@ -481,29 +482,9 @@ public class DetectPanel extends javax.swing.JPanel {
                         }
                     }
                 }                
-            }
-            List<URL> jdoc = platform.getJavadocFolders();
-            if (jdoc.size()>0) {
-                URL folderRoot = jdoc.get(0);
-                if ("jar".equals(folderRoot.getProtocol())) {
-                    folderRoot = FileUtil.getArchiveFile (folderRoot);
-                }
-                jdocPath = new File (URI.create(folderRoot.toExternalForm())).getAbsolutePath();
-            }
-            else if (firstPass) {
-                for (FileObject folder : platform.getInstallFolders()) {
-                    File base = FileUtil.toFile(folder);
-                    if (base!=null) {
-                        File f = new File (base,"docs"); //NOI18N
-                        if (f.isDirectory() && f.canRead()) {
-                            jdocPath = f.getAbsolutePath();
-                        }                        
-                    }
-                }
                 firstPass = false;
             }
             this.component.setSources (srcPath);
-            this.component.setJavadoc (jdocPath);
             this.component.jdkName.setEditable(false);
             this.component.progressPanel.setVisible (true);
             this.component.progressLabel.setVisible (true);
@@ -535,7 +516,7 @@ public class DetectPanel extends javax.swing.JPanel {
             if (isValid()) {                                
                 String name = component.getPlatformName();                
                 List<PathResourceImplementation> src = new ArrayList<PathResourceImplementation>();
-                List<URL> jdoc = new ArrayList<URL>();
+                List<URL> jdoc = null;
                 String srcPath = this.component.getSources();
                 if (srcPath!=null) {
                     File f = new File (srcPath);
@@ -562,16 +543,21 @@ public class DetectPanel extends javax.swing.JPanel {
                 }
                 String jdocPath = this.component.getJavadoc();
                 if (jdocPath!=null) {
-                    File f = new File (jdocPath);
                     try {
-                        URL url = f.toURI().toURL();
-                        if (FileUtil.isArchiveFile(url)) {
-                            url = FileUtil.getArchiveRoot(url);
+                        jdoc = new ArrayList<URL>();
+                        if (jdocPath.startsWith("http")) {
+                            jdoc.add(new URL(jdocPath));
+                        } else {
+                            File f = new File(jdocPath);
+                            URL url = f.toURI().toURL();
+                            if (FileUtil.isArchiveFile(url)) {
+                                url = FileUtil.getArchiveRoot(url);
+                            }
+                            else if (!f.exists()){
+                                url = new URL (url.toExternalForm()+'/');
+                            }
+                            jdoc.add (url);
                         }
-                        else if (!f.exists()){
-                            url = new URL (url.toExternalForm()+'/');
-                        }
-                        jdoc.add (url);
                     } catch (MalformedURLException mue) {
                     }
                 }
@@ -580,7 +566,9 @@ public class DetectPanel extends javax.swing.JPanel {
                 platform.setDisplayName (name);
                 platform.setAntName (createAntName (name));
                 platform.setSourceFolders (ClassPathSupport.createClassPath(src));
-                platform.setJavadocFolders (jdoc);
+                if (jdoc != null) {
+                    platform.setJavadocFolders(jdoc);
+                }
                 
                 platform = this.iterator.getSecondaryPlatform();
                 if (platform != null) {
@@ -588,7 +576,9 @@ public class DetectPanel extends javax.swing.JPanel {
                     platform.setDisplayName (name);
                     platform.setAntName (createAntName(name));
                     platform.setSourceFolders (ClassPathSupport.createClassPath(src));
-                    platform.setJavadocFolders (jdoc);
+                    if (jdoc != null) {
+                        platform.setJavadocFolders(jdoc);
+                    }
                 }                                
             }
         }
@@ -599,6 +589,27 @@ public class DetectPanel extends javax.swing.JPanel {
         public void taskFinished(Task task) {
             EventQueue.invokeLater(new Runnable() {
                 public void run () {
+                    JavaPlatform platform = iterator.getPlatform();
+                    List<URL> jdoc = platform.getJavadocFolders();
+                    try {
+                        URL url = null;
+                        if (jdoc.size() > 0) {
+                            url = jdoc.get(0);
+                            if ("jar".equals(url.getProtocol())) {
+                                url = FileUtil.getArchiveFile(url);
+                            }
+                        } else {
+                            List<URL> urls = J2SEPlatformImpl.defaultJavadoc(platform);
+                            if (urls.size() == 1) {
+                                url = urls.iterator().next();
+                            }
+                        }
+                        if (url != null) {
+                            component.setJavadoc(url.getProtocol().equals("file") ? new File(url.toURI()).getAbsolutePath() : url.toString());
+                        }
+                    } catch (URISyntaxException ex) {
+                        Exceptions.printStackTrace(ex);
+                    }
                     component.updateData ();
                     component.jdkName.setEditable(true);
                     assert progressHandle != null;
